@@ -24,9 +24,9 @@ if sys.version_info.major != 3 or sys.version_info.minor < 9:
     )
     sys.exit(-1)
 
-if sys.version_info.minor >= 10:
+if sys.version_info.minor >= 11:
     print(
-        f"[VERSION DETECTOR][WARN] Detected python version 3.{sys.version_info.minor}, which is >= 10, which may break at any point"
+        f"[VERSION DETECTOR][WARN] Detected python version 3.{sys.version_info.minor}, which is >= 11, which may break at any point"
     )
 
 # LaunchWrapper is the system for launching the game
