@@ -52,6 +52,11 @@ information on development:
     - develop a PyCharm plugin for FactoryBuilder type hints, and mod dev stuff
 
 
+changelog of snapshot 21w??a, released on ??.??.2021 targeting <1.17>
+    Python:
+        - allowing now python 3.10, as all our dependencies have upgraded their support
+
+
 changelog of snapshot 21w35a released on 01.09.2021 targeting 1.17.1
     JVM:
         - a lot smaller stuff, fixes, more integration work
